frontend/styles/navbar.module.css
.container {
  width: 100%;
  margin-bottom: 30px;
}

.main {
  width: 100%;
  background-color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 30px;
  gap: 20px;
  border-bottom: 1px solid lightgray;
  z-index: 99;
}

.right {
  display: flex;
  align-items: center;
  gap: 20px;
}

.notifications {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.notifications_count {
  position: absolute;
  top: 4px;
  /* left: 1.75rem; */
  right: 4px;
  background-color: red;
  color: white;
  border-radius: 999px;
  min-width: 20px;
  height: 20px;
  padding: 5px;
  font-size: 0.9em;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.logo {
  position: relative;
  min-width: 180px;
  width: 240px;
  height: 80px;
  border: none;
  background-color: transparent;
  margin-bottom: -2px;
  cursor: pointer;
}

.search {
  padding: 0 10px;
  flex: 1;
}

.user_avatar {
  display: flex;
  flex-direction: column;
  padding: 0;
  background: 0;
  border: none;
  cursor: pointer;
}

.account_popper {
  padding: 15px 25px;
}

.session_msg {
  font-size: 0.85rem;
  /* Hello, <username> */
  max-width: 18ch;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.session_submsg {
  display: flex;
  align-items: flex-end;
  font-size: 0.9rem;
  font-weight: 600;
}

.no_session_msg {
  font-size: 0.85rem;
  line-height: 1.3;
}

.link {
  color: #007bff;
  text-decoration: underline;
  font-size: 0.85rem;
  font-weight: 600;
  border: none;
  background-color: transparent;
  margin-bottom: -2px;
  cursor: pointer;
}

.links_container {
  padding: 7px 30px 9px 30px;
  border-bottom: 1px solid lightgray;
  background-color: white;
}

.links {
  display: flex;
  gap: 40px;
  list-style-type: none;
}

.page_link {
  color: rgb(81, 81, 81);
}
.page_button {
  font-size: 0.9rem;
  border: none;
  background-color: transparent;
  margin-bottom: -2px;
  cursor: pointer;
}
.page_button:hover,
.page_button:focus-visible {
  color: var(--primary);
  text-decoration: underline;
}

.account_popper_row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 2px;
}

.account_popper_username_email {
  margin-left: 10px;
  margin-bottom: -2px;
}
.account_popper_username {
  font-size: 1.1em;
  font-weight: 500;
  max-width: 10ch;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.account_popper_email {
  margin-top: 2px;
  font-size: 0.7em;
  color: gray;
  max-width: 25ch;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.account_popper_avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.3rem;
  background-color: white;
  border-radius: 999px;
}

.user_sell_count {
  margin-bottom: -2px;
  font-size: 0.9em;
  margin-left: 0.5ch;
  color: var(--accent);
}

.signout {
  background: none;
  border: none;
  padding: 0;
  font-family: Inter, "Inter Fallback";
  display: flex;
  align-items: center;
  cursor: pointer;
  margin-left: 35px;
  height: 100%;
  margin-bottom: -2px;
}
.signout:hover,
.signout:focus-visible {
  filter: brightness(0.8);
  color: var(--primary);
  text-decoration: underline;
}

.signout_text {
  margin-right: -2px;
}

.account_popper_bottom {
  display: flex;
  height: fit-content;
  justify-content: space-around;
  gap: 10px;
  margin-top: 8px;
}

.account_popper_vertical_divider {
  width: 1px;
  align-self: stretch;
  background-color: lightgray;
  margin: 0 10px;
}
.account_popper_horizontal_divider {
  width: 100%;
  height: 1px;
  background-color: lightgray;
  margin: 15px 0;
}

.my_superbiddo,
.my_account {
  padding: 10px 0 5px 0;
}

.account_popper_section_heading {
  font-weight: 600;
  margin-bottom: 13px;
}

.account_popper_section_list {
  padding-left: 2px;
}

.account_popper_section_item {
  display: block;
  background: none;
  border: none;
  padding: 0;
  font-family: Inter, "Inter Fallback";
  font-size: 0.88rem;
  margin-bottom: 10px;
  cursor: pointer;
}
.account_popper_section_item:hover,
.account_popper_section_item:focus-visible {
  color: var(--primary);
  text-decoration: underline;
}

.search_option {
  margin-left: 8px;
}

